brandnewproject/src/objects/Students_Information__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bachlor_Degree__c</fullName>
        <label>Bachlor Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B com</fullName>
                </value>
                <value>
                    <fullName>B pharmacy</fullName>
                </value>
                <value>
                    <fullName>B SC</fullName>
                </value>
                <value>
                    <fullName>B tech</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Nursing</fullName>
                </value>
                <value>
                    <fullName>physiotherapy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <displayFormat>SID-{00}</displayFormat>
        <externalId>true</externalId>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Students Name</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Students Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>